overlays/production/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Nextcloud"
    gethomepage.dev/description: "Cloud Storage & Collaboration"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "nextcloud"
    gethomepage.dev/href: "https://nextcloud.elmstreet79.de"
    gethomepage.dev/weight: "5"
    gethomepage.dev/ping: nextcloud.elmstreet79.de
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nextcloud.elmstreet79.de
      secretName: nextcloud-tls
  rules:
    - host: nextcloud.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
